# stock-portfolio-tracker

./: .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  mypy.ini  pyproject.toml
stock-alert/: app.py  main.py  send_html_email_service.py  stock_alert_model.py  stock_alert_service.py
stock-alert/data/: portfolio.csv
stock-alert/html/: mail_body.html  portfolio.html
tests/: trading_bot.py
